trunk/Archive2/c6/6f9a39d59521d5/output
+ g++-4.8 -std=c++11 -O2 -Wall -pedantic main.cpp
main.cpp: In function ‘int main()’:
main.cpp:14:14: error: ‘class std::vector<int>’ has no member named ‘pop_front’
         data.pop_front();
              ^
