trunk/Archive2/c6/6f9a39d59521d5/main.cpp
#include <iostream>
#include <list>
#include <deque>
#include <vector>
using namespace std;

int main() {
    vector<int> data;
    int i;
    while (cin >> i)
        data.insert(data.begin(), i);
    while (!data.empty()) {
        cout << data.front() << ' ';
        data.pop_front();
    }
}
        
    